syntax = "proto3";

package auth.v1;

import "google/api/annotations.proto";

option go_package = "server/api/auth/v1;v1";
option java_multiple_files = true;
option java_outer_classname = "AuthProtoV1";
option java_package = "dev.kratos.api.auth.v1";

service Auth {
	rpc Signup (SignupRequest) returns (SignupResponse) {
		option (google.api.http) = {
			post: "/auth/signup"
			body: "*"
		};
	}
	rpc Login (LoginRequest) returns (LoginResponse) {
		option (google.api.http) = {
			post: "/auth/login"
			body: "*"
		};
	}
	rpc Refresh (RefreshRequest) returns (RefreshResponse) {
		option (google.api.http) = {
			post: "/auth/refresh"
			body: "*"
		};
	}
	rpc Logout (LogoutRequest) returns (LogoutResponse) {
		option (google.api.http) = {
			post: "/auth/logout"
			body: "*"
		};
	}
	rpc Validate (ValidateRequest) returns (ValidateResponse) {
		option (google.api.http) = {
			post: "/auth/validate"
			body: "*"
		};
	}
}

message SignupRequest {
	string username = 1;
	string email = 2;
	string password = 3;
}

message SignupResponse {
	string access_token = 1;
	string refresh_token = 2;
}

message LoginRequest {
	string username = 1;
	string password = 2;
}

message LoginResponse {
	string access_token = 1;
	string refresh_token = 2;
}

message RefreshRequest {
	string refresh_token = 1;
}

message RefreshResponse {
	string access_token = 1;
	string refresh_token = 2;
}

message LogoutRequest {
	string refresh_token = 1;
}

message LogoutResponse {
	string access_token = 1;
	string refresh_token = 2;
}

message ValidateRequest {
	string access_token = 1;
}

message ValidateResponse {
	bool valid = 1;
	string id = 2;
	string username = 3;
	string email = 4;
	string exp = 5;
}
